# crates/kirra-planner/Cargo.toml
#
# Occy autonomy planner — Phase-0 interface lock (#89 / Occy 0.A).
#
# This crate PROPOSES trajectories that the EXISTING checker consumes; it does
# not check. The held line (Phase-0): NO parallel redefinitions of types that
# already exist on main — import them. The checked trajectory type
# (`TrajectoryPoint`), the validation entry (`validate_trajectory_slow`, the #131
# per-trajectory containment path), and the corridor/config/ego types all live in
# `kirra-ros2-adapter`; `default-features = false` keeps ROS / r2r out of this
# crate (the adapter's `default = []`). `FleetPosture` + the SG2 containment cap are
# in the lean `kirra-core` crate (de-monolith Stage 4).
#
# Phase-0 FINDING (surfaced in the PR, not fixed here): the checked trajectory
# contract + the validation entry living in the *adapter* (a downstream
# integration crate) inverts the planner -> adapter direction and pulls the whole
# SDK. Proposal: promote the contract to a lean shared home in a later phase.
[package]
name = "kirra-planner"
version = "0.1.0"
edition = "2021"
description = "Occy autonomy planner — Phase-0 interface lock. Proposes trajectories consumed by the existing #131 validation path; does not itself check."
repository = "https://github.com/kirra-systems/kirra-runtime-sdk"
license-file = "../../COPYRIGHT"
publish = false  # proprietary (see COPYRIGHT) — not for crates.io

[dependencies]
# The #131 checker entry + the checked trajectory/corridor/config/ego types.
# default-features = false → no ROS (adapter `default = []`; `ros2` is opt-in).
kirra-ros2-adapter = { path = "../kirra-ros2-adapter", default-features = false }
# FleetPosture + the SG2 containment cap (MAX_TRAJECTORY_HORIZON) for the posture →
# planner-mode mapping and the trajectory-length bound — now from the lean `kirra-core`
# crate (de-monolith Stage 4), so the planner no longer pulls the verifier service's
# heavy tree directly (the adapter dep remains until the adapter is de-monolithed).
kirra-core = { path = "../kirra-core" }
# The shared lane-map crate (de-monolith Stage 6b): LaneGraph / routing / right-of-way,
# the lane-line crossing rules, and the Lanelet2 `.osm` parser. The planner re-exports
# from it (lanemap / lanelet2 / behavior's lane-line types). It carries the roxmltree
# (OSM-XML) dep the planner's own `lanelet2.rs` used to.
kirra-map = { path = "../kirra-map" }
# Mick LLM-intent JSON parsing (the System-2 → Occy intent seam).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# End-to-end stack integration test (tests/taj_occy_kirra_stack.rs):
# scan → Taj perception → Occy plan → KIRRA verdict. Taj is NOT a normal
# dependency of the planner — the two are wired together only in the test.
# kirra-ros2-adapter is named here so the test can call the checker entry
# (validate_trajectory_slow) + VehicleConfig directly.
kirra-taj = { path = "../kirra-taj" }
kirra-ros2-adapter = { path = "../kirra-ros2-adapter", default-features = false }
