# crates/kirra-planner/Cargo.toml
#
# Occy autonomy planner — Phase-0 interface lock (#89 / Occy 0.A).
#
# This crate PROPOSES trajectories that the EXISTING checker consumes; it does
# not check. The held line (Phase-0): NO parallel redefinitions of types that
# already exist on main — import them. The checked trajectory type
# (`TrajectoryPoint`), the validation entry (`validate_trajectory_slow`, the #131
# per-trajectory containment path), and the corridor/config/ego types all live in
# `kirra-ros2-adapter`; `default-features = false` keeps ROS / r2r out of this
# crate (the adapter's `default = []`). `FleetPosture` + the SG2 containment cap are
# in the lean `kirra-core` crate (de-monolith Stage 4).
#
# Phase-0 FINDING (surfaced in the PR, not fixed here): the checked trajectory
# contract + the validation entry living in the *adapter* (a downstream
# integration crate) inverts the planner -> adapter direction and pulls the whole
# SDK. Proposal: promote the contract to a lean shared home in a later phase.
[package]
name = "kirra-planner"
version = "0.1.0"
edition = "2021"
# MSRV floor inherited from the workspace root ([workspace.package]) — one
# source of truth per workspace, so `cargo <cmd> -p <member>` on an old
# toolchain fails the rust-version check up front, never mid-compile (#797 F3).
rust-version.workspace = true
description = "Occy autonomy planner — Phase-0 interface lock. Proposes trajectories consumed by the existing #131 validation path; does not itself check."
repository = "https://github.com/kirra-systems/kirra-runtime-sdk"
license-file = "../../COPYRIGHT"
publish = false  # proprietary (see COPYRIGHT) — not for crates.io

[dependencies]
# Build hygiene (review M3): the planner's library needs only the lean contract
# types — the corridor seam + trajectory/perception types (kirra-core, Stage 6a) and
# FleetPosture + the SG2 containment cap (kirra-core, Stage 4). The heavy
# `kirra-ros2-adapter` is now a DEV-dependency only: its `validate_trajectory_slow`
# checker entry is exercised solely by the tests. So the planner no longer pulls the
# adapter (and its ros2/tokio tree) into its normal build at all.
kirra-core = { path = "../kirra-core" }
# The shared lane-map crate (de-monolith Stage 6b): LaneGraph / routing / right-of-way,
# the lane-line crossing rules, and the Lanelet2 `.osm` parser. The planner re-exports
# from it (lanemap / lanelet2 / behavior's lane-line types). It carries the roxmltree
# (OSM-XML) dep the planner's own `lanelet2.rs` used to.
kirra-map = { path = "../kirra-map" }
# Mick LLM-intent JSON parsing (the System-2 → Occy intent seam).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# End-to-end stack integration test (tests/taj_occy_kirra_stack.rs):
# scan → Taj perception → Occy plan → KIRRA verdict. Taj is NOT a normal
# dependency of the planner — the two are wired together only in the test.
# R1: the lean `kirra-trajectory` crate is named here so the tests can call the
# checker entry (validate_trajectory_slow) + VehicleConfig directly, WITHOUT pulling
# the ROS 2 integration crate (kirra-ros2-adapter / r2r / tokio).
kirra-taj = { path = "../kirra-taj" }
kirra-trajectory = { path = "../kirra-trajectory" }
# Property-based tests of the planner's global invariants (tests/cruise_proptest.rs).
proptest = "1"
