# crates/kirra-proposal-bench/Cargo.toml
#
# DEV/TEST ONLY — a UDP bench tool that exercises a running
# kirra-governor-service across a sweep of proposals and prints the verdicts.
# NOT a shipped or safety artifact. Depends only on the shared wire mirror
# (kirra-wire-client) → serde + bincode + std; no kirra-runtime-sdk, no ROS/async.
[package]
name = "kirra-proposal-bench"
version = "0.1.0"
edition = "2021"
description = "DEV/TEST UDP bench for kirra-governor-service — sends a proposal sweep and prints the verdict table. Not a safety artifact."
repository = "https://github.com/kirra-systems/kirra-runtime-sdk"
license-file = "../../COPYRIGHT"
publish = false  # proprietary (see COPYRIGHT) — not for crates.io

[[bin]]
name = "kirra-proposal-bench"
path = "src/main.rs"

[dependencies]
kirra-wire-client = { path = "../kirra-wire-client" }
